# django_project_advanced

./: .gitignore  build.sh  pyproject.toml  render.yaml  script.sh
core/: admin.py  forms.py  models.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_cargo_alter_servico_icone_alter_servico_servico_and_more.py  0003_alter_equipe_options_alter_servico_icone.py  0004_alter_servico_icone.py  0005_alter_servico_icone.py  0006_alter_servico_icone.py  0007_alter_servico_icone.py  0008_alter_servico_icone.py  0009_alter_servico_icone.py  0010_alter_equipe_image_alter_servico_icone.py  0011_alter_servico_icone.py  0012_alter_servico_icone.py  0013_alter_servico_icone.py  0014_alter_servico_icone.py  0015_alter_servico_icone.py  0016_alter_servico_icone.py  0017_alter_servico_icone.py  0018_alter_servico_icone.py  0019_alter_servico_icone.py  0020_alter_servico_icone.py  0021_recurso_alter_servico_icone.py  0022_alter_recurso_icone_alter_servico_icone.py  0023_alter_equipe_bio_alter_recurso_icone_and_more.py  0024_alter_recurso_descricao_alter_recurso_icone_and_more.py  0025_alter_recurso_icone_alter_servico_icone.py  0026_alter_recurso_icone_alter_servico_icone.py  0027_plano_alter_recurso_icone_alter_servico_icone.py  0028_alter_plano_icone_alter_plano_valor_and_more.py  0029_alter_plano_icone_alter_recurso_icone_and_more.py  0030_alter_plano_icone_alter_recurso_icone_and_more.py
core/templates/: 404.html  500.html  base.html  contact.html  features.html  footer.html  hero.html  index.html  pricing.html  (+3 more)
fusion/: .covaregerc  asgi.py  settings.py  urls.py
(+2 files in other folders)
