[tool.poetry]
name = "django-project-advanced"
version = "0.1.0"
description = ""
authors = ["LucasPires50 <luc_50@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^5.0"
psycopg2-binary = "^2.9.9"
gunicorn = "^21.2.0"
dj-static = "^0.0.6"
django-stdimage = "^6.0.2"
python-decouple = "^3.8"
whitenoise = {extras = ["brotli"], version = "^6.6.0"}
dj-database-url = "^2.1.0"
django-money = "^3.4.1"
django-semantic-admin = "^0.4.0"
model-mommy = "^2.0.0"
coverage = "^7.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
